Bug: Increase instruction font size on mobile for accessibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ body {
 
 h2,
 p {
-    color: rgb(49, 49, 49);
+    color: rgb(26, 26, 26);
 }
 
 h2 {
@@ -43,7 +43,7 @@ h2 {
 }
 
 p {
-    font-size: large;
+    font-size: x-large;
 }
 
 button {
